@@ -1,3 +1,7 @@
+04/29/2005   Ian Lewis <IanLewis@member.fsf.org>
+
+    * Added support for adding entity reference nodes to the tree.
+
 04/28/2005   Ian Lewis <IanLewis@member.fsf.org>
     
     * Updated the options panel to conform to the new OptionsPanel interface in
